--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
 <div class="content-wrapper">
-  <div class="section-header">
-    <h1 class="title">Adishwar Rishi</h1>
-    <h2 class="subtitle">Engineer, gamer and D&D enthusiast</h2>
+  <div id="about-me">
+    <h1 id="about-me--title">Hello, I'm Adi</h1>
+    <h2 id="about-me--subtitle">
+      Software engineer, gamer and D&D enthusiast
+    </h2>
+  </div>
+  <div id="my-projects">
+    <h1 id="my-projects--title">Here are some of my projects</h1>
   </div>
 </div>
