--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,6 @@
 
 // Custom layout styles for the main document
 @use 'global-styles/global-layout.scss';
+
+// External fonts
+@use 'global-styles/fonts.scss';
